[package]
name = "cerebro"
version = "0.1.18"
authors = ["Enrico Lefass <enrico.lefass@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.*"
# OpenGL fltk = { version = "0.9.4", features = ["enable-glwindow"] }
fltk = "^0.13"
# hvif = "0.1.0" - non-existent
image = "0.23.*"
tar = "0.4.*"
serde = "1.0.*"
