[package]
name = "cerebro"
version = "0.1.27"
authors = ["Enrico Lefass <enrico.lefass@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.*"
# OpenGL fltk = { version = "0.9.4", features = ["enable-glwindow"] }
# fltk = "^1"
fltk = { version = "^1", features = ["fltk-bundled"] }
# hvif = "0.1.0" - non-existent eventually never be used but I let it stay here a while longer
image = "0.24.*"
open = "3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tar = "0.4.*"

[profile.release]
debug = 0
lto = true
opt-level = 3
strip = "debuginfo"